align fixes

--- a/Portfolio.Me/Portfolio.Me/portfolio-v2-updated/src/app/picture-carousel/picture-carousel.component.scss
+++ b/Portfolio.Me/Portfolio.Me/portfolio-v2-updated/src/app/picture-carousel/picture-carousel.component.scss
@@ -2,6 +2,7 @@
     position: relative;
     height: 200px;
     width: 400px;
+    top: 60px;
     &,
     * {
         cursor: zoom-in;
